Algo de maquetado
Eliminamos la pruebas y comenzamos a esbozar nuestra aplicación. Para
ello comenzamos con nociones básicas de maquinación.

--- a/client-favoritos/app/views/home.html
+++ b/client-favoritos/app/views/home.html
@@ -1,5 +1,13 @@
-<h1>{{title}}</h1>
-<p>{{description}}</p>
-
-<!--MOSTRAMOS OTRO COMPONENTE-->
-<favoritos-list></favoritos-list>
+<header id="header">
+    <img src="../../assets/images/angular-icon.svg" id="logo"/>
+    <div class="title-subtitle">
+        <h1>{{title}}</h1>
+        <p>{{description}}</p>
+    </div>
+    <div class="clearfix"></div>
+</header>
+<section class="main">
+    <!--MOSTRAMOS OTRO COMPONENTE-->
+    <favoritos-list></favoritos-list>
+    <div class="clearfix"></div>
+</section>
