--- a/client-favoritos/app/views/favoritos-list.html
+++ b/client-favoritos/app/views/favoritos-list.html
@@ -1,1 +1,7 @@
 <strong>{{title}}</strong>
+
+<ul id="favoritos-list">
+    <li *ngFor="let favorito of favoritos" class="favorito-item">
+        <h4>{{favorito.title}}</h4>
+    </li>
+</ul>
