--- a/client-favoritos/app/views/favoritos-list.html
+++ b/client-favoritos/app/views/favoritos-list.html
@@ -1,4 +1,7 @@
-<ul id="favoritos-list">
+<div cass="loading" *ngIf="loading">
+    <img src="../../assets/images/loader.gif" />
+</div>
+<ul id="favoritos-list" *ngIf="favoritos">
     <li *ngFor="let favorito of favoritos" class="favorito-item">
         <div class="content-data">
             <h4>{{favorito.title}}</h4>
@@ -8,15 +11,15 @@
                     Ir al marcador
                 </a>
 
-                <a href="" target="_blank" class="btn btn-ver">
+                <a [routerLink]="['/marcador', favorito._id]" class="btn btn-ver">
                     Ver
                 </a>
 
-                <a href="" target="_blank" class="btn btn-editar">
+                <a href="" class="btn btn-editar">
                     Editar
                 </a>
 
-                <a href="" target="_blank" class="btn btn-eliminar">
+                <a href="" class="btn btn-eliminar">
                     Eliminar
                 </a>
             </p>
