--- a/client-favoritos/assets/css/style.css
+++ b/client-favoritos/assets/css/style.css
@@ -50,6 +50,26 @@ header #logo{
     float: left;
 }
 
+.btn-add-favorito{
+    display: block;
+    padding: 10px;
+    float: right;
+    margin-right: 30px;
+    margin-top:  5px;
+    background: #eee;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 5px grey;
+    color: #666;
+    text-decoration: none;
+    transition: all 300ms;
+}
+
+.btn-add-favorito:hover{
+    background: white;
+    color: #444;
+}
+
 footer{
     width: 80%;
     margin: 0px auto;
@@ -111,6 +131,10 @@ footer{
     margin-left: 20px;
 }
 
+.loading{
+    margin: 25px;
+}
+
 .favorito-item h4{
     color: #444;
     margin: 0px;
@@ -123,4 +147,13 @@ footer{
     height: 45px;
     overflow: hidden;
     margin-top: 2px;
+}
+.favorito-box{
+    margin-left: 25px;
+    background: white;
+    border: 1px solid #ddd;
+    width: 90%;
+    min-height: 150px;
+    margin-top: 20px;
+    padding: 20px;
 }
