Añadida la funcionalidad de editar un marcador
Hemos añadido la funcionalidad de editar un marcador reutilizando buena
parte de lo que teníamos a la hora de añadir uno nuevo.

--- a/client-favoritos/app/views/favoritos-list.html
+++ b/client-favoritos/app/views/favoritos-list.html
@@ -15,7 +15,7 @@
                     Ver
                 </a>
 
-                <a href="" class="btn btn-editar">
+                <a [routerLink]="['/editar-marcador', favorito._id]" class="btn btn-editar">
                     Editar
                 </a>
 
