Añadida la funcionalidad de borrar
Se añade la última funcionalidad básica deseada para poder borrar un
marcador.

--- a/client-favoritos/assets/css/style.css
+++ b/client-favoritos/assets/css/style.css
@@ -157,3 +157,11 @@ footer{
     margin-top: 20px;
     padding: 20px;
 }
+
+.seguro{
+    position: absolute;
+    margin-top: -95px;
+    background: white;
+    width: 275px;
+    text-align: center;
+}
