--- a/client-favoritos/app/views/favoritos-list.html
+++ b/client-favoritos/app/views/favoritos-list.html
@@ -19,10 +19,21 @@
                     Editar
                 </a>
 
-                <a href="" class="btn btn-eliminar">
+                <a (click)="onBorrarConfirm(favorito._id)" class="btn btn-eliminar">
                     Eliminar
                 </a>
             </p>
+            <div class="seguro" *ngIf="confirmado == favorito._id">
+                <p>
+                    <strong>¿Estas seguro de querer borrar el marcador?</strong>
+                    <a (click)="onBorrarFavorito(favorito._id)" class="btn btn-eliminar">
+                        Eliminar
+                    </a>
+                    <a (click)="onCancelarConfirm(favorito._id)" class="btn btn-ver">
+                        Cancelar
+                    </a>
+                </p>
+            </div>
         </div>
     </li>
 </ul>
